crates/kotlin-syntax/tests/snapshots/lexer_snapshots__semicolon.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
;;;

TOKENS:
SEMICOLON ";"
SEMICOLON ";"
SEMICOLON ";"
NEWLINE "\n"

LEX_ERRORS:
<none>
