crates/kotlin-syntax/tests/snapshots/lexer_snapshots__unsupported_escape_sequence_error.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
val bad = "\q"

TOKENS:
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "bad"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
OPEN_QUOTE "\""
ESCAPE_SEQUENCE "\\q"
CLOSE_QUOTE "\""
NEWLINE "\n"

LEX_ERRORS:
LexicalError { kind: UnsupportedEscapeSequence, range: 11..12 }
