crates/kotlin-syntax/tests/snapshots/lexer_snapshots__unterminated_block_comment_error.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
/*
    never closed

TOKENS:
BLOCK_COMMENT "/*\n    never closed\n"

LEX_ERRORS:
LexicalError { kind: UnterminatedBlockComment, range: 0..20 }
