crates/kotlin-syntax/tests/snapshots/lexer_snapshots__unterminated_string_error.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
val x = "hello

TOKENS:
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "x"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
OPEN_QUOTE "\""
STRING_CONTENT "hello"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
LexicalError { kind: UnterminatedString, range: 14..14 }
