crates/kotlin-syntax/tests/snapshots/lexer_snapshots__zero.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
0

TOKENS:
INTEGER_LITERAL "0"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>
